# solores

./: Cargo.toml  README.md
examples/anchor/: raydium-cpmm.idl
examples/anchor/raydium-cpmm/raydium_cp_swap_interface/: Cargo.toml
examples/anchor/raydium-cpmm/raydium_cp_swap_interface/src/: errors.rs  instructions.rs  lib.rs  typedefs.rs
examples/anchor/raydium-cpmm/raydium_cpmm_interface/: Cargo.toml
examples/anchor/raydium-cpmm/raydium_cpmm_interface/src/: errors.rs  instructions.rs  typedefs.rs
solores/: Cargo.toml
solores/src/: lib.rs  utils.rs  write_cargotoml.rs  write_src.rs
solores/src/idl_format/: mod.rs
solores/src/idl_format/anchor/: mod.rs
solores/src/idl_format/anchor/accounts/: account.rs  mod.rs
solores/src/idl_format/anchor/errors/: error.rs  mod.rs
solores/src/idl_format/anchor/events/: event.rs
solores/src/idl_format/anchor/instructions/: instruction.rs
solores/src/idl_format/anchor/typedefs/: mod.rs  typedef.rs
solores/src/idl_format/bincode/: mod.rs
solores/src/idl_format/shank/: mod.rs
solores/tests/: test_gen_and_check_examples.rs
