[package]
name = "raydium_cp_swap_interface"
version = "0.2.0"
edition = "2024"

[dependencies.borsh]
workspace = true

[dependencies.bytemuck]
features = ["derive"]
workspace = true

[dependencies.num-derive]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.serde]
optional = true
workspace = true

[dependencies.serde_bytes]
optional = true
workspace = true

[dependencies.solana-program]
workspace = true

[dependencies.thiserror]
workspace = true

[features]
serde = ["dep:serde", "dep:serde_bytes"]
